--- a/wind-up taxi/.gitignore
+++ b/wind-up taxi/.gitignore
@@ -6,12 +6,14 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+[Ll]ogs/
 
 # file on crash reports
 sysinfo.txt
 
 # Unity3D generated meta files
 *.pidb.meta
+*.log
 
 # Unity crash reports
 *.stacktrace
