--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ wind-up taxi/.vs/wind-up taxi/FileContentIndex/af22c814-6da7-428c-a94a-9155fac5a
 
 *.vsidx
 wind-up taxi/FMOD/FMODPRJCT_ScoreSpaceJam2025/.cache
+wind-up taxi/UserSettings/EditorUserSettings.asset
